# prc_01m

./: README.md  pyproject.toml
prc_01m/: __init__.py  output_file.docx
prc_01m/templates/: Untitled 2.docx  docx_t.docx
