[tool.poetry]
name = "prc-01m"
version = "0.1.0"
description = ""
authors = ["Collins Conover <conover@geocities.com>"]
readme = "README.md"
packages = [{include = "prc_01m"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
