[tool.poetry]
name = "prc-01m"
version = "0.1.0"
description = ""
authors = ["Collins Conover <conover@geocities.com>"]
readme = "README.md"
packages = [{include = "prc_01m"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
docxtpl = "^0.16.7"
xlrd = "^2.0.1"
pypinfo = "^21.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
